# Show

./: .gitignore  CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  OpenCLEnvironment.cpp  OpenCLEnvironment.h  README.md  bmp.cpp  bmp.h  image.cpp  image.h  main.cpp  math.cpp  math.h
kernels/: program.cl
